@@ -1,5 +1,5 @@
 #
-# $Id: //poco/1.3/build/config/Darwin#2 $
+# $Id: //poco/1.3/build/config/Darwin#5 $
 #
 # Darwin8
 #
@@ -19,8 +19,8 @@ CXX     = c++
 LINK    = $(CXX) -bind_at_load
 LIB     = libtool -static -o
 RANLIB  = ranlib
-SHLIB   = $(CXX) -dynamiclib -Wl,-install_name,$@ -o $@
-DYLIB   = $(CXX) -dynamic -bundle -read_only_relocs suppress -Wl,-noprebind -Wl,-bind_at_load -o $@ 
+SHLIB   = $(CXX) -dynamiclib -o $@
+DYLIB   = $(CXX) -dynamic -bundle -read_only_relocs suppress -Wl,-bind_at_load -o $@ 
 SHLIBLN = $(POCO_BASE)/build/script/shlibln
 STRIP   = 
 DEP     = $(POCO_BASE)/build/script/makedepend.gcc
@@ -53,11 +53,11 @@ STATICOPT_LINK  =
 SHAREDOPT_CC    = -fPIC 
 SHAREDOPT_CXX   = -fPIC
 SHAREDOPT_LINK  = 
-DEBUGOPT_CC     = -g -D_DEBUG=$(DEBUGLEVEL)
-DEBUGOPT_CXX    = -g -D_DEBUG=$(DEBUGLEVEL) 
+DEBUGOPT_CC     = -g -gdwarf-2 -D_DEBUG=$(DEBUGLEVEL)
+DEBUGOPT_CXX    = -g -gdwarf-2 -D_DEBUG=$(DEBUGLEVEL) -D_GLIBCXX_DEBUG=1 -D_GLIBCXX_DEBUG_PEDANTIC=1 -mfix-and-continue -fvisibility-inlines-hidden 
 DEBUGOPT_LINK   =
-RELEASEOPT_CC   = -DNDEBUG -O2
-RELEASEOPT_CXX  = -DNDEBUG -O 
+RELEASEOPT_CC   = -DNDEBUG -Os
+RELEASEOPT_CXX  = -DNDEBUG -O2 -fvisibility-inlines-hidden
 RELEASEOPT_LINK =
 
 #
@@ -68,4 +68,4 @@ SYSFLAGS = -DPOCO_HAVE_IPv6
 #
 # System Specific Libraries
 #
-SYSLIBS  =  -ldl
+SYSLIBS  = -ldl
